--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<input class="color2" type="color" name="color2" value="#ff0000">
 	<h2>Currennt CSS Background:</h2>
 	<h3></h3>
+	<h6>created by eyal ovadya</h6>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
